--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "request": "~2.22.0",
     "expect.js": "~0.2.0",
     "grunt-contrib-jshint": "~0.6.0",
-    "grunt-bump": "0.0.11"
+    "grunt-bump": "0.0.11",
+    "supertest": "~0.8.2"
   },
   "dependencies": {
     "express": "~3.3.4",
