Add support to change database being used based on request parameter.
Extend configuration options to allow a request parameter to set which
database is being used for each action.
Update tests to support both configuration options.
Remove agent configuration for request so that it will not override
application level configurations for nano.

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A core rest api for a couchdb database",
   "main": "index.js",
   "scripts": {
-    "test": "mocha"
+    "test": "mocha --reporter spec"
   },
   "repository": "",
   "keywords": [
